Вариант с разными паддингами у блоков

--- a/source/form.html
+++ b/source/form.html
@@ -34,7 +34,7 @@
   <main>
     <div class="promo promo--inner">Баннер</div>
     <section class="page-form">
-      <div class="page-intro">
+      <div class="page-intro page-intro--inner">
         <h1 class="page-intro__title">Оставьте свой отзыв</h1>
         <p class="page-intro__text">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
       </div>
@@ -63,10 +63,12 @@
               <li class="form__group-item">
                 <label class="form__group-title" for="phone-number">Контактный телефон*:</label>
                 <input class="form__field" id="phone-number" name="tel" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="Введите телефон" required>
+                <div class="form__phone">Иконка телефона</div>
               </li>
               <li class="form__group-item">
                 <label class="form__group-title" for="email">Электронная почта*:</label>
                 <input class="form__field" id="email" name="email" type="email" placeholder="Введите e-mail" required>
+                <div class="form__email">Иконка почты</div>
               </li>
             </ul>
           </fieldset>
