--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,7 @@
     </div>
   </header>
   <main>
-    <div class="promo">Баннер</div>
+    <div class="promo promo--decoration">Баннер</div>
     <section class="reasons">
       <div class="page-intro page-intro--decoration">
         <h1 class="page-intro__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
@@ -90,7 +90,7 @@
       <div class="commercial__content">
         <h2 class="commercial__title">Заинтересовались?</h2>
         <p class="commercial__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="commercial__link" href="#">Найти гостиницу</a>
+        <a class="button commercial__link" href="#">Найти гостиницу</a>
       </div>
       <div class="commercial__map"><span class="visually-hidden">Карта, на которой указано местоположение Седоны</span></div>
     </section>
