--- a/source/photo.html
+++ b/source/photo.html
@@ -34,18 +34,18 @@
   <main>
     <div class="promo promo--inner">Баннер</div>
     <section class="photo">
-      <div class="page-intro">
+      <div class="page-intro page-intro--inner">
         <h1 class="page-intro__title">Фото и видео</h1>
         <p class="page-intro__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
-      <div class="promo-photo">
+      <div class="promo-photo promo-photo--border">
         <a class="promo-photo__link" href="#">
           <img class="promo-photo__image" src="#" width="#" height="#" alt="Закат с видом на шоссе и горы">
         </a>
         <span class="promo-photo__title">Неродные просторы</span>
         <span class="promo-photo__subtitle">Автор фото: Борис</span>
         <div class="promo-photo__like">
-          <span class="promo-photo__like-number">1350<"/span">
+          <span class="promo-photo__like-number">1350</span>
         </div>
       </div>
       <div class="promo-photo">
@@ -55,7 +55,7 @@
         <span class="promo-photo__title">Местная растительность</span>
         <span class="promo-photo__subtitle">Автор фото: Сергей</span>
         <div class="promo-photo__like">
-          <span class="promo-photo__like-number">143<"/span">
+          <span class="promo-photo__like-number">143</span>
         </div>
       </div>
       <div class="promo-photo">
@@ -65,7 +65,7 @@
         <span class="promo-photo__title">Дорога на север</span>
         <span class="promo-photo__subtitle">Автор фото: Петр</span>
         <div class="promo-photo__like">
-          <span class="promo-photo__like-number">96<"/span">
+          <span class="promo-photo__like-number">96</span>
         </div>
       </div>
       <div class="promo-photo">
@@ -75,7 +75,7 @@
         <span class="promo-photo__title">Мост Дьявола</span>
         <span class="promo-photo__subtitle">Автор фото: Антон</span>
         <div class="promo-photo__like">
-          <span class="promo-photo__like-number">254<"/span">
+          <span class="promo-photo__like-number">254</span>
         </div>
       </div>
     </section>
@@ -84,7 +84,7 @@
         <h2 class="commercial__title">Все еще сомневаетесь?</h2>
         <p class="commercial__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
       </div>
-      <video class="commercial__video" controls preload="metadata" width="#" height="#" poster="#">
+      <video class="commercial__video" controls preload="metadata" width="320" height="200" poster="#">
       </video>
     </section>
   </main>
