--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
           <a class="main-nav__link" href="#">html academy</a>
         </li>
       </ul>
-      <button class="main-nav__button--close main-nav__button--open" type="button">Меню</button>
+      <button class="main-nav__button" type="button">Меню</button>
     </nav>
     <div class="logo page-header__logo">
       <a class="logo__link">
@@ -116,7 +116,7 @@
     </ul>
     <div class="copyright">
       <p class="copyright__content">Разработано</p>
-      <a class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive"></a>
+      <a class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive">htmlacademy</a>
     </div>
   </footer>
 </body>
