--- a/source/form.html
+++ b/source/form.html
@@ -140,7 +140,7 @@
     </ul>
     <div class="copyright">
       <p class="copyright__content">Разработано</p>
-      <a class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive"></a>
+      <a class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive">htmlacademy</a>
     </div>
   </footer>
 </body>
