--- a/source/photo.html
+++ b/source/photo.html
@@ -109,7 +109,7 @@
     </ul>
     <div class="copyright">
       <p class="copyright__content">Разработано</p>
-      <a class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive"></a>
+      <a class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive">htmlacademy</a>
     </div>
   </footer>
 </body>
