--- a/source/form.html
+++ b/source/form.html
@@ -40,75 +40,83 @@
       </div>
       <div class="page-form__inner">
         <form class="form" action="#" method="post">
-          <fieldset class="form__group">
-            <legend class="form__group-heading">Представьтесь:</legend>
-            <ul class="form__group-list">
-              <li class="form__group-item">
-                <label class="form__group-title" for="name">Имя*:</label>
-                <input class="form__field" id="name" name="name" type="text" placeholder="Петр" required>
-              </li>
-              <li class="form__group-item">
-                <label class="form__group-title" for="sername">Фамилия*:</label>
-                <input class="form__field" id="sername" name="name" type="text" placeholder="Иванов" required>
-              </li>
-              <li class="form__group-item">
-                <label class="form__group-title" for="patronym">Отчество:</label>
-                <input class="form__field" id="patronym" name="name" type="text" placeholder="Александрович">
-              </li>
-            </ul>
+          <fieldset class="form__group form__group-inner">
+            <div class="form__group-wrapper">
+              <legend class="form__group-heading">Представьтесь:</legend>
+              <ul class="form__group-list">
+                <li class="form__group-item">
+                  <label class="form__group-title" for="name">Имя*:</label>
+                  <input class="form__field" id="name" name="name" type="text" placeholder="Петр" required>
+                </li>
+                <li class="form__group-item">
+                  <label class="form__group-title" for="sername">Фамилия*:</label>
+                  <input class="form__field" id="sername" name="name" type="text" placeholder="Иванов" required>
+                </li>
+                <li class="form__group-item">
+                  <label class="form__group-title" for="patronym">Отчество:</label>
+                  <input class="form__field" id="patronym" name="name" type="text" placeholder="Александрович">
+                </li>
+              </ul>
+            </div>
           </fieldset>
           <fieldset class="form__group">
-            <legend class="form__group-heading">Контактная информация</legend>
-            <ul class="form__group-list">
-              <li class="form__group-item">
-                <label class="form__group-title" for="phone-number">Контактный телефон*:</label>
-                <input class="form__field" id="phone-number" name="tel" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="Введите телефон" required>
-                <div class="form__phone">Иконка телефона</div>
-              </li>
-              <li class="form__group-item">
-                <label class="form__group-title" for="email">Электронная почта*:</label>
-                <input class="form__field" id="email" name="email" type="email" placeholder="Введите e-mail" required>
-                <div class="form__email">Иконка почты</div>
-              </li>
-            </ul>
+            <div class="form__group-wrapper">
+              <legend class="form__group-heading">Контактная информация</legend>
+              <ul class="form__group-list">
+                <li class="form__group-item">
+                  <label class="form__group-title" for="phone-number">Контактный телефон*:</label>
+                  <input class="form__field" id="phone-number" name="tel" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="Введите телефон" required>
+                  <div class="form__phone">Иконка телефона</div>
+                </li>
+                <li class="form__group-item">
+                  <label class="form__group-title" for="email">Электронная почта*:</label>
+                  <input class="form__field" id="email" name="email" type="email" placeholder="Введите e-mail" required>
+                  <div class="form__email">Иконка почты</div>
+                </li>
+              </ul>
+            </div>
           </fieldset>
           <fieldset class="form__group">
-            <legend class="form__group-heading">Ваше общее впечатление:</legend>
-            <ul class="form__group-list">
-              <li class="form__group-item">
-                <label class="form__radio-title" for="positive">Скорее положительное</label>
-                <input class="form__radio visually-hidden" id="positive" type="radio" name="positive" value="positive" checked>
-              </li>
-              <li class="form__group-item">
-                <label class="form__radio-title" for="negative">Скорее отрицательное</label>
-                <input class="form__radio visually-hidden" id="negative" type="radio" name="negative" value="negative">
-              </li>
-              <li class="form__group-item">
-                <label class="form__radio-title" for="neutral">Затрудняюсь ответить</label>
-                <input class="form__radio visually-hidden" id="neutral" type="radio" name="neutral" value="neutral">
-              </li>
-            </ul>
+            <div class="form__group-wrapper">
+              <legend class="form__group-heading">Ваше общее впечатление:</legend>
+              <ul class="form__group-list">
+                <li class="form__group-item">
+                  <label class="form__radio-title" for="positive">Скорее положительное</label>
+                  <input class="form__radio visually-hidden" id="positive" type="radio" name="positive" value="positive" checked>
+                </li>
+                <li class="form__group-item">
+                  <label class="form__radio-title" for="negative">Скорее отрицательное</label>
+                  <input class="form__radio visually-hidden" id="negative" type="radio" name="negative" value="negative">
+                </li>
+                <li class="form__group-item">
+                  <label class="form__radio-title" for="neutral">Затрудняюсь ответить</label>
+                  <input class="form__radio visually-hidden" id="neutral" type="radio" name="neutral" value="neutral">
+                </li>
+              </ul>
+            </div>
           </fieldset>
           <fieldset class="form__group">
-            <legend class="form__group-heading">Посещенные достопримечательности:</legend>
-            <ul class="form__group-list">
-              <li class="form__group-item">
-                <label class="form__checkbox-title" for="bridge">Мост Дьявола</label>
-                <input class="form__checkbox visually-hidden" id="bridge" type="checkbox" name="bridge" value="bridge" checked>
-              </li>
-              <li class="form__group-item">
-                <label class="form__checkbox-title" for="mountain">Гора-Колокол</label>
-                <input class="form__checkbox visually-hidden" id="mountain" type="checkbox" name="mountain" value="mountain" checked>
-              </li>
-              <li class="form__group-item">
-                <label class="form__checkbox-title" for="park">Слайд-парк</label>
-                <input class="form__checkbox visually-hidden" id="park" type="checkbox" name="park" value="park" checked>
-              </li>
-              <li class="form__group-item">
-                <label class="form__checkbox-title" for="rocks">Красные скалы</label>
-                <input class="form__checkbox visually-hidden" id="rocks" type="checkbox" name="rocks" value="rocks">
-              </li>
-            </ul>
+            <div class="form__group-wrapper">
+              <legend class="form__group-heading">Посещенные достопримечательности:</legend>
+              <ul class="form__group-list">
+                <li class="form__group-item">
+                  <label class="form__checkbox-title" for="bridge">Мост Дьявола</label>
+                  <input class="form__checkbox visually-hidden" id="bridge" type="checkbox" name="bridge" value="bridge" checked>
+                </li>
+                <li class="form__group-item">
+                  <label class="form__checkbox-title" for="mountain">Гора-Колокол</label>
+                  <input class="form__checkbox visually-hidden" id="mountain" type="checkbox" name="mountain" value="mountain" checked>
+                </li>
+                <li class="form__group-item">
+                  <label class="form__checkbox-title" for="park">Слайд-парк</label>
+                  <input class="form__checkbox visually-hidden" id="park" type="checkbox" name="park" value="park" checked>
+                </li>
+                <li class="form__group-item">
+                  <label class="form__checkbox-title" for="rocks">Красные скалы</label>
+                  <input class="form__checkbox visually-hidden" id="rocks" type="checkbox" name="rocks" value="rocks">
+                </li>
+              </ul>
+            </div>
           </fieldset>
           <div class="form__inner">
             <label class="form__group-heading" for="review">Опишите свои эмоции:</label>
