--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="fonts/ptsansbold.woff" rel="stylesheet">
+  <link href="fonts/ptsans.woff2" rel="stylesheet">
+  <link href="fonts/ptsansbold.woff" rel="stylesheet">
+  <link href="fonts/ptsansbold.woff2" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
