--- a/source/photo.html
+++ b/source/photo.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="css/normalize.css">
   <link href="css/style.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
   <header class="page-header">
@@ -26,12 +28,13 @@
     </nav>
     <div class="logo page-header__logo">
       <a class="logo__link">
-        <img class="logo__image" src="#" width="#" height="#" alt="логотип сайта Седона">
+        <img class="logo__image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип сайта Седона">
       </a>
     </div>
   </header>
   <main>
     <div class="promo promo--inner">Баннер</div>
+    <div class="page-decoration page-decoration--inner">Декоративный элемент</div>
     <section class="photo">
       <div class="page-intro page-intro--inner">
         <h1 class="page-intro__title">Фото и видео</h1>
