Доверстала сетку для всех страниц

--- a/source/photo.html
+++ b/source/photo.html
@@ -40,48 +40,66 @@
         <h1 class="page-intro__title">Фото и видео</h1>
         <p class="page-intro__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
-      <div class="promo-photo promo-photo--border">
-        <a class="promo-photo__link" href="#">
-          <img class="promo-photo__image" src="#" width="#" height="#" alt="Закат с видом на шоссе и горы">
-        </a>
-        <span class="promo-photo__title">Неродные просторы</span>
-        <span class="promo-photo__subtitle">Автор фото: Борис</span>
-        <div class="promo-photo__like">
-          <span class="promo-photo__like-number">1350</span>
+      <div class="photo__wrapper">
+        <div class="promo-photo promo-photo--first promo-photo--border">
+          <a class="promo-photo__link" href="#">
+            <img class="promo-photo__image" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Закат с видом на шоссе и горы">
+          </a>
+          <div class="photo__meta">
+            <div class="photo__description">
+              <span class="promo-photo__title">Неродные просторы</span>
+              <span class="promo-photo__subtitle">Автор фото: Борис</span>
+            </div>
+            <div class="promo-photo__like">
+              <span class="promo-photo__like-number">1350</span>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="promo-photo">
-        <a class="promo-photo__link" href="#">
-          <img class="promo-photo__image" src="#" width="#" height="#" alt="Пушистый кактус на фоне скал">
-        </a>
-        <span class="promo-photo__title">Местная растительность</span>
-        <span class="promo-photo__subtitle">Автор фото: Сергей</span>
-        <div class="promo-photo__like">
-          <span class="promo-photo__like-number">143</span>
+        <div class="promo-photo">
+          <a class="promo-photo__link" href="#">
+            <img class="promo-photo__image" src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Пушистый кактус на фоне скал">
+          </a>
+          <div class="photo__meta">
+            <div class="photo__description">
+              <span class="promo-photo__title">Местная растительность</span>
+              <span class="promo-photo__subtitle">Автор фото: Сергей</span>
+            </div>
+            <div class="promo-photo__like">
+              <span class="promo-photo__like-number">143</span>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="promo-photo">
-        <a class="promo-photo__link" href="#">
-          <img class="promo-photo__image" src="#" width="#" height="#" alt="Дорога в горном лесу: вид сверху">
-        </a>
-        <span class="promo-photo__title">Дорога на север</span>
-        <span class="promo-photo__subtitle">Автор фото: Петр</span>
-        <div class="promo-photo__like">
-          <span class="promo-photo__like-number">96</span>
+        <div class="promo-photo">
+          <a class="promo-photo__link" href="#">
+            <img class="promo-photo__image" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дорога в горном лесу: вид сверху">
+          </a>
+          <div class="photo__meta">
+            <div class="photo__description">
+              <span class="promo-photo__title">Дорога на север</span>
+              <span class="promo-photo__subtitle">Автор фото: Петр</span>
+            </div>
+            <div class="promo-photo__like">
+              <span class="promo-photo__like-number">96</span>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="promo-photo">
-        <a class="promo-photo__link" href="#">
-          <img class="promo-photo__image" src="#" width="#" height="#" alt="Узкий мостик естественного происхождения в скалах над пропастью">
-        </a>
-        <span class="promo-photo__title">Мост Дьявола</span>
-        <span class="promo-photo__subtitle">Автор фото: Антон</span>
-        <div class="promo-photo__like">
-          <span class="promo-photo__like-number">254</span>
+        <div class="promo-photo">
+          <a class="promo-photo__link" href="#">
+            <img class="promo-photo__image" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Узкий мостик естественного происхождения в скалах над пропастью">
+          </a>
+          <div class="photo__meta">
+            <div class="photo__description">
+              <span class="promo-photo__title">Мост Дьявола</span>
+              <span class="promo-photo__subtitle">Автор фото: Антон</span>
+            </div>
+            <div class="promo-photo__like">
+              <span class="promo-photo__like-number">254</span>
+            </div>
+          </div>
         </div>
       </div>
     </section>
-    <section class="commercial">
+    <section class="commercial commercial--inner">
       <div class="commercial__content">
         <h2 class="commercial__title">Все еще сомневаетесь?</h2>
         <p class="commercial__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
