Убрала дубли правил

--- a/source/index.html
+++ b/source/index.html
@@ -97,7 +97,7 @@
       <section class="commercial">
         <div class="commercial__content">
           <h2 class="commercial__title">Заинтересовались?</h2>
-          <p class="commercial__text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="commercial__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="button commercial__link" href="#">Найти гостиницу</a>
         </div>
         <div class="commercial__map"><span class="visually-hidden">Карта, на которой указано местоположение Седоны</span></div>
