Адаптивно сверстала Главную и фото

--- a/source/form.html
+++ b/source/form.html
@@ -25,13 +25,12 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/">html academy</a>
           </li>
         </ul>
-        <button class="main-nav__button--close main-nav__button--open" type="button">Меню</button>
-      </nav>
-      <div class="logo page-header__logo">
-        <a class="logo__link" href="index.html">
-          <img class="logo__image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип сайта Седона">
+        <a class="logo logo__link">
+          <img class="logo__image logo__mobile" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип сайта Седона">
+          <img class="logo__image logo__desktop" src="img/logotype-desktop.png" width="188" height="96" alt="Логотип сайта Седона">
         </a>
-      </div>
+        <button class="main-nav__button" type="button">Меню</button>
+      </nav>
     </header>
     <main>
       <div class="promo promo--inner">Баннер</div>
