--- a/source/index.html
+++ b/source/index.html
@@ -25,13 +25,12 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/">html academy</a>
           </li>
         </ul>
+        <a class="logo logo__link">
+          <img class="logo__image logo__mobile" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип сайта Седона">
+          <img class="logo__image logo__desktop" src="img/logotype-desktop.png" width="188" height="96" alt="Логотип сайта Седона">
+        </a>
         <button class="main-nav__button" type="button">Меню</button>
       </nav>
-      <div class="logo page-header__logo">
-        <a class="logo__link">
-          <img class="logo__image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип сайта Седона">
-        </a>
-      </div>
     </header>
     <main>
       <div class="promo">Баннер</div>
@@ -97,7 +96,7 @@
       <section class="commercial">
         <div class="commercial__content">
           <h2 class="commercial__title">Заинтересовались?</h2>
-          <p class="commercial__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="commercial__text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="button commercial__link" href="#">Найти гостиницу</a>
         </div>
         <div class="commercial__map"><span class="visually-hidden">Карта, на которой указано местоположение Седоны</span></div>
