--- a/source/photo.html
+++ b/source/photo.html
@@ -25,13 +25,12 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/">html academy</a>
           </li>
         </ul>
-        <button class="main-nav__button--close main-nav__button--open" type="button">Меню</button>
-      </nav>
-      <div class="logo page-header__logo">
-        <a class="logo__link" href="index.html">
-          <img class="logo__image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип сайта Седона">
+        <a class="logo logo__link">
+          <img class="logo__image logo__mobile" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип сайта Седона">
+          <img class="logo__image logo__desktop" src="img/logotype-desktop.png" width="188" height="96" alt="Логотип сайта Седона">
         </a>
-      </div>
+        <button class="main-nav__button" type="button">Меню</button>
+      </nav>
     </header>
     <main>
       <div class="promo promo--inner">Баннер</div>
@@ -41,7 +40,7 @@
           <p class="page-intro__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
         </div>
         <div class="photo__wrapper">
-          <div class="promo-photo promo-photo--first promo-photo--border">
+          <div class="promo-photo promo-photo--first">
             <a class="promo-photo__link" href="#">
               <img class="promo-photo__image" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Закат с видом на шоссе и горы">
             </a>
