Сверстала все страницы

--- a/source/form.html
+++ b/source/form.html
@@ -127,8 +127,10 @@
               <label class="form__group-heading" for="review">Опишите свои эмоции:</label>
               <textarea class="form__field form__field-message" id="review" name="review" placeholder="Опишите подробно все свои восторги"></textarea>
             </div>
-            <button class="button page-form__button" type="submit">Отправить отзыв</button>
-            <div class="form__note">* — Обязательные поля</div>
+            <div class="form__bottom">
+              <button class="button page-form__button" type="submit">Отправить отзыв</button>
+              <div class="form__note">* — Обязательные поля</div>
+            </div>
           </form>
         </div>
       </section>
