--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
@@ -12,7 +11,7 @@
     <header class="page-header">
       <nav class="main-nav page-header__menu">
         <ul class="main-nav__list">
-          <li class="main-nav__item">
+          <li class="main-nav__item main-nav--opened">
             <a class="main-nav__link" href="#">Главная</a>
           </li>
           <li class="main-nav__item">
@@ -29,14 +28,16 @@
           <img class="logo__image logo__mobile" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип сайта Седона">
           <img class="logo__image logo__desktop" src="img/logotype-desktop.png" width="188" height="96" alt="Логотип сайта Седона">
         </a>
-        <button class="main-nav__button" type="button">Меню</button>
+          <div class="main-nav__wrapper">
+          <button class="main-nav__button main-nav--closed" type="button"><img class="main-nav__image" src="img/icon-menu.svg" width="23" height="22" alt="Кнопка меню"></button>
+        </div>
       </nav>
     </header>
     <main>
       <div class="promo">Баннер</div>
       <section class="reasons">
         <div class="page-intro">
-          <h1 class="page-intro__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+          <h1 class="page-intro__title">Седона -- небольшой<br> городок в Аризоне,<br> заслуживающий большего!</h1>
           <p class="page-intro__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </div>
         <div class="reason">
@@ -54,41 +55,41 @@
           </li>
           <li class="advantages__item advantages__item--souvenirs">
             <h2 class="advantages__item-title">Сувениры</h2>
-            <p class="advantages__item-text">Не только китайского, но и местного производства!</p>
+            <p class="advantages__item-text">Не только китайского,<br> но и местного производства!</p>
           </li>
           <li class="advantages__item advantages__item--food">
             <h2 class="advantages__item-title">Еда</h2>
-            <p class="advantages__item-text advantages__item-last">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            <p class="advantages__item-text advantages__item-last">Всегда заказывайте<br> фирменный бургер,<br> вы не<br> разочаруетесь!</p>
           </li>
         </ul>
-        <div class="reason">
+        <div class="reason reason--bridge">
           <div class="reason__description reason--order">
-            <h2 class="reason__title">Там есть мост Дьявола</h2>
+            <h2 class="reason__title">Там есть<br> мост Дьявола</h2>
             <span class="reason__index-number">— №2 —</span>
-            <p class="reason__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <p class="reason__text">Да, по нему можно пройти!<br> Если вы осмелитесь, конечно</p>
           </div>
           <img class="reason__image" src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Узкий каменный мостик над живописной пропастью">
         </div>
         <div class="reasons__reason-description">
-          <div class="reason reason--secondary">
+          <div class="reason reason--secondary reason--small">
             <div class="reason__wrapper reason__border">
               <h2 class="reason__title">Небольшая площадь</h2>
               <span class="reason__index-number">— №3 —</span>
-              <p class="reason__text reason__text-secondary">Все интересные места находятся очень близко</p>
+              <p class="reason__text reason__text-secondary">Все интересные места находятся очень<br> близко</p>
             </div>
           </div>
           <div class="reason reason--secondary">
-            <div class="reason__wrapper reason__border">
+            <div class="reason__wrapper reason__border reason--road">
               <h2 class="reason__title">Красивая дорога</h2>
               <span class="reason__index-number">— №4 —</span>
-              <p class="reason__text reason__text-secondary">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <p class="reason__text reason__text-secondary">Ехать в Седону из<br> Лас-Вегаса<br> совсем <br>не скучно!</p>
             </div>
           </div>
-          <div class="reason reason--secondary">
+          <div class="reason reason--secondary reason--tourists">
             <div class="reason__wrapper">
               <h2 class="reason__title">Мало туристов</h2>
               <span class="reason__index-number">— №5 —</span>
-              <p class="reason__text reason__text-secondary">Большинство едет в Гранд Каньон и толпится там</p>
+              <p class="reason__text reason__text-secondary">Большинство едет в Гранд Каньон<br> и толпится там</p>
             </div>
           </div>
         </div>
@@ -107,23 +108,33 @@
       <ul class="social">
         <li class="social__item">
           <a class="social__link social__link--twitter" href="#">
-            <span class="visually-hidden">Твиттер</span>
+            <div class="social__image">
+              <span class="visually-hidden">Твиттер</span>
+            </div>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--fb" href="#">
-            <span class="visually-hidden">Фэйсбук</span>
+            <div class="social__image">
+              <span class="visually-hidden">Фэйсбук</span>
+            </div>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--youtube" href="#">
-            <span class="visually-hidden">Ютюб</span>
+            <div class="social__image">
+              <span class="visually-hidden">Ютюб</span>
+            </div>
           </a>
         </li>
       </ul>
       <div class="copyright">
         <p class="copyright__content">Разработано</p>
-        <a class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive">htmlacademy</a>
+        <a class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+            <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
+          </svg>
+        </a>
       </div>
     </footer>
   </div>
