--- a/source/form.html
+++ b/source/form.html
@@ -25,7 +25,7 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/">html academy</a>
           </li>
         </ul>
-        <a class="logo logo__link">
+        <a class="logo logo__link" href="index.html">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
@@ -76,14 +76,14 @@
                         <label class="form__group-title form__title-phone" for="phone-number"><span>Контактный</span> телефон*:</label>
                         <div class="form__group-content">
                           <input class="form__field form__field-phone" id="phone-number" name="tel" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="Введите телефон" required>
-                          <div class="form__phone">Иконка телефона</div>
+                          <div class="form__phone"><span class="visually-hidden">Иконка телефона</span></div>
                         </div>
                       </li>
                       <li class="form__group-item form__item-contacts">
                         <label class="form__group-title form__title-email" for="email">Электронная почта*:</label>
                         <div class="form__group-content">
                           <input class="form__field form__field-email" id="email" name="email" type="email" placeholder="Введите e-mail" required>
-                          <div class="form__email">Иконка почты</div>
+                          <div class="form__email"><span class="visually-hidden">Иконка почты</span></div>
                         </div>
                       </li>
                     </ul>
